[package]
name = "cellularust"
version = "0.1.0"
authors = ["Envis10n <envis10n@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston_window = "0.117.0"
piston2d-gfx_graphics = "0.72.0"
piston2d-graphics = "0.39.0"
rand = "0.8.3"